--- a/Beta/src/main/resources/application.properties
+++ b/Beta/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.validationQuery = SELECT 1
 # ==============================================================
 # = Show or not log for each sql query
 # ==============================================================
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 # ==============================================================
 # = Hibernate ddl auto (create, create-drop, update)
